        Implement WebFrame::startDownload

Fixes the WebKit side of Bug 25729: Alt-clicking a link doesn't start
        a download <https://bugs.webkit.org/show_bug.cgi?id=25729>. Fixing
        this all the way will require a change in Safari.

        Reviewed by Darin Adler.

        * WebFrame.cpp:
        (WebFrame::startDownload): Call through to WebView::downloadURL.

Canonical link: https://commits.webkit.org/36109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44273 268f45cc-cd09-0410-ab3c-d52691b4dbfc